Refactor count function to use new function registry.